# 7166CEM_Coursework

./: .clang-format  Application.c_CPPCheck.xml  Application.h_CPPCheck.xml  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  can_wrap.h_CPPCheck.xml  candata.c_CPPCheck.xml  candata.dbc  candata.h_CPPCheck.xml  cmake_install.cmake  commands.sh  compile_commands.json
Docs/: CMakeLists.txt  Doxyfile.docs  Makefile  cmake_install.cmake
Docs/html/: Application_8c.html  Application_8h.html  Application_8h_source.html  annotated.html  can__wrap_8h.html  can__wrap_8h_source.html  candata_8c.html  candata_8h.html  candata_8h_source.html  classes.html  dir_413f4e031a85da0d68269c6fd2f76e1c.html  dir_78f5ff2120b8d2ca86624115c89ba744.html  dir_856524284ebe840938865dc061f982fb.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  menudata.js  structcandata__ai__drive__request__t-members.html  structcandata__ai__drive__request__t.html  structcandata__motor__current__t-members.html  structcandata__motor__current__t.html  structcandata__vcu__battery__t-members.html  structcandata__vcu__battery__t.html  structcandata__vcu__wheel__speeds__t-members.html  structcandata__vcu__wheel__speeds__t.html
Docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  classes_0.js  defines_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js
Include/: Application.h  can_wrap.h  candata.h
Src/: Application.c  candata.c
Src_autogen/: candata.c  candata.h
Test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  TestApplication.c  Test_Application.c  Test_BatteryFrameProcessing.c  Test_DriveRequestFrameProcessing.c  Test_FrontCurrentCalculation.c  Test_FrontTorqueLimit.c  Test_GenerateCANFrame.c  Test_MotorCurrentFrameProcess.c  Test_RearCurrentCalculation.c  Test_RearTorqueLimit.c  Test_VCUWheelSpeedFrameProcess.c  cmake_install.cmake
Testing/: CMakeLists.txt  CTestTestfile.cmake  Makefile  Test_BatteryFrameProcessing.c  Test_DriveRequestFrameProcessing.c  Test_FrontCurrentCalculation.c  Test_FrontTorqueLimit.c  Test_GenerateCANFrame.c  Test_MotorCurrentFrameProcess.c  Test_RearCurrentCalculation.c  Test_RearTorqueLimit.c  Test_VCUWheelSpeedFrameProcess.c  cmake_install.cmake
Testing/Temporary/: CTestCostData.txt
